# StarTrek

./: .codeclimate.yml  .dccache  .dcignore  .env  .gitignore  .~lock.STFC Pirates localhost.ods#  README.md  STFC API Examples.http  STFC Build IMPORTs.py  STFC Officers.ods  STFC Pirate 1 Def.sql  STFC Pirate 2 Ships.sql  STFC Pirate 3 Systems.sql  STFC Pirate 4 Alt.sql  STFC Pirate All.sql  STFC Pirate Status.md  STFC Pirate Status.txt  STFC Pirate.sql  STFC Pirates localhost.odb  STFC Pirates localhost.ods  Star Trek Territories.odg  Star Trek debriefing.txt  mypy.ini  mysql.neptunescove.org.odb  pyproject.toml  pythonPackages.txt  requirements-dev.txt  requirements.dev.txt  requirements.txt  stfc_get.py  stfc_territories.py
.kanbn/: index.md
Database SQL/: README.md  STFC Pirate 1 Def.sql  STFC Pirate 2 Ships.sql  STFC Pirate 3 Systems.sql  STFC Pirate All.sql
Misc STFC Doc/: Isolytic Damage Research.ods  README.md  STFC Active Base Defense.md  STFC Incursion Notes.md  STFC Officers.xlsx  STFC Territory Times.csv  STFC_Bold_Defense_05292023.xlsx  STFC_Gorilla_Team 2.pages  STFC_Gorilla_Team 2.txt  STFC_Gorilla_Team 3.pages  STFC_Gorilla_Team.pages  Territory Plans S61.txt  Territory – STFC Knowledge Base.csv
STFC Alliance Resource Tracking/: README.md  StarTrekAllianceResources.ods
api.stfc.def/: README.md  Response.json  STFC API Examples.http  STFC API Examples.rest
env/: pyvenv.cfg
