[project]
name = "StarTrek"
keywords = ["Star Trek", "Fleet Command", "Python"]
version = "0.2.6"
requires-python = ">=3.12"
description = "Star Trek Fleet Command Projects"
authors = [
    {name = "Al Ferguson", email = "aferguson@neptunescove.org>"},
]
maintainers = [
    {name = "Al Ferguson", email = "aferguson@neptunescove.org>"},
]
license = "GPLv3+"
readme = "README.md"
readme-type = "markdown"
Changelog = "CHANGELOG.md"
dependencies = [
    "requests",
]
tools = [
    "bandit",
    "black",
    "flake8",
    "isort",
    "mypy",
    "pyflakes",
    "pylama",
    "pylint",
    "ruff",
    "semgrep",
 ]
classifiers  = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable    
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: >=3.12",
]

[project.urls]
url = "https://github.com/AlFerguson/StarTrek_Projects"
url_type = "github"

[tool.black]
line-length = 88
target-version = ['py312', 'py313']

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
python_version = 3.12
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["pip-tools","setuptools>=42", "wheel"]
