[project]
name = "StarTrek"
keywords = ["Star Trek", "Fleet Command", "Python"]
version = "0.2.6"
requires-python = ">=3.13"
description = "Star Trek Fleet Command Projects"
authors = [
    {name = "Al Ferguson", email = "aferguson@neptunescove.org>"},
]
maintainers = [
    {name = "Al Ferguson", email = "aferguson@neptunescove.org>"},
]
license = "GPL-3.0-or-later"
readme = "README.md"
readme-type = "markdown"
Changelog = "CHANGELOG.md"
classifiers  = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable    
    "Development Status :: 4 - Beta",
    "Intended Audience :: STFC Commodores",
    "Programming Language :: Python :: >=3.12",
]
dependencies = [
    "requests >=2.31.0",
]

[project.urls]
url = "https://github.com/AlFerguson/StarTrek_Projects"
url_type = "github"
documentation = "https://docs.github.com/AlFerguson/StarTrek_Projects"

[tool.uv]
upgrade = true

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
python_version = 3.12
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py313"

[dependency-groups]
dev = [
    "annotated-types>=0.6.0",
    "bandit>=1.7.5",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy-extensions>=1.0.0",
    "mypy>=1.7.1",
    "pyflakes>=3.1.0",
    "pylama>=8.4.1",
    "pylint>=3.0.2",
    "pyzstd>=0.16.2",
    "ruff>=0.11.0",
    "semgrep>=1.95.0",
    "types-requests>=2.32.0",
    "typing_extensions>=4.7.1",
    "zstandard>=0.23.0",
]
